# service/api/login-user.go
@@ -2,26 +2,25 @@ package api
 
 import (
 	"encoding/json"
-	"github.com/julienschmidt/httprouter"
 	"net/http"
-	"github.com/SHu0117/WASA-Photo/service/database"
+
 	"github.com/SHu0117/WASA-Photo/service/api/reqcontext"
-	"errors"
-	
+	"github.com/SHu0117/WASA-Photo/service/database"
+	"github.com/julienschmidt/httprouter"
 )
 
 func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	
+
 	var user User
 	err := json.NewDecoder(r.Body).Decode(&user)
 	if err != nil {
 		// The body was not a parseable JSON, reject it
 		w.WriteHeader(http.StatusBadRequest)
 		return
-	} 
+	}
 
-	err = rt.db.ExistUsername(user.Username )
-	if errors.Is(err, database.ErrDataDoesNotExist) {
+	err = rt.db.ExistUsername(user.Username)
+	if err == database.ErrDataDoesNotExist {
 		dbuser, err := rt.db.NewUser(user.UserToDatabase())
 		if err != nil {
 			// In this case, we have an error on our side. Log the error (so we can be notified) and send a 500 to the user
@@ -29,15 +28,27 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 			ctx.Logger.WithError(err).Error("can't create the user")
 			w.WriteHeader(http.StatusInternalServerError)
 			return
-		}else if err != nil{
+		}
+		user.UserFromDatabase(dbuser)
+
+		// Send the output to the user.
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(http.StatusCreated)
+		_ = json.NewEncoder(w).Encode(user)
+
+	} else if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	} else {
+		dbuser, err := rt.db.GetUserID(user.Username)
+		if err != nil {
 			w.WriteHeader(http.StatusInternalServerError)
 			return
 		}
-
-	user.UserFromDatabase(dbuser)
-
-	// Send the output to the user.
-	w.Header().Set("Content-Type", "application/json")
-	_ = json.NewEncoder(w).Encode(user)
+		user.UserFromDatabase(dbuser)
+		w.WriteHeader(http.StatusOK)
+		w.Header().Set("Content-Type", "application/json")
+		_ = json.NewEncoder(w).Encode(user)
 	}
+
 }
